# n-body

./: .gitignore  Cargo.toml  README.md  particles.json  particles.txt
src/: get-bodies.rs  lib.rs  main.rs  n-body.rs  particle.rs  point.rs  system.rs
