[package]
name = "n-body"
version = "0.3.0"
authors = ["Brandon Mittman <BrandonMittman@gmail.com>"]
description = "An n-body simulator"
repository = "https://github.com/Big-B/n-body"
license = "GPL-3.0"

[profile.release]
panic = 'abort'
lto = true

[dependencies]
clap         = "*"
lazy_static  = "*"
regex        = "*"
reqwest      = "*"
select       = "*"
serde        = "*"
serde_derive = "*"
serde_json   = "*"
