[package]
name = "n-body"
version = "0.3.0"
authors = ["Brandon Mittman <BrandonMittman@gmail.com>"]
description = "An n-body simulator"
repository = "https://github.com/Big-B/n-body"
license = "GPL-3.0"

[profile.release]
lto = true

[dependencies]
clap         = "*"
lazy_static  = "*"
rayon        = "*"
regex        = "*"
reqwest      = "*"
select       = "*"
serde        = "*"
serde_derive = "*"
serde_json   = "*"
