[package]
name = "n-body"
version = "0.3.0"
authors = ["Brandon Mittman <BrandonMittman@gmail.com>"]
description = "An n-body simulator"
repository = "https://github.com/Big-B/n-body"
license = "GPL-3.0"
edition = "2021"

[profile.release]
debug = true

[dependencies]
clap         = {version = "*", features = ["derive"]}
lazy_static  = "*"
rayon        = "*"
regex        = "*"
reqwest      = {version = "*", features = ["blocking"]}
select       = "*"
serde        = "*"
serde_derive = "*"
serde_json   = "*"
